--- a/freeway.plist
+++ b/freeway.plist
@@ -1,39 +1,1 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-<plist version="1.0">
-<dict>
-<key>items</key>
-<array>
-<dict>
-<key>assets</key>
-<array>
-<dict>
-<key>kind</key>
-<string>software-package</string>
-<key>url</key>
-<string>http://218.201.61.148:8088/freeway/common/downloadApp?type=2</string>
-</dict>
-<dict>
-<key>kind</key>
-<string>full-size-image</string>
-<key>needs-shine</key>
-<true/>
-<key>url</key>
-<string>http://218.201.61.148:8088/freeway/lib/style/img/logo.png</string>
-</dict>
-</array>
-<key>metadata</key>
-<dict>
-<key>bundle-identifier</key>
-<string>BT.Avanker</string>
-<key>bundle-version</key>
-<string>1.0</string>
-<key>kind</key>
-<string>software</string>
-<key>title</key>
-<string>安全管理系统</string>
-</dict>
-</dict>
-</array>
-</dict>
-</plist>
+<?xml version='1.0' encoding='UTF-8'?><!DOCTYPE plist PUBLIC '-//Apple//DTD PLIST 1.0//EN' 'http://www.apple.com/DTDs/PropertyList-1.0.dtd'><plist version='1.0'><dict><key>items</key><array><dict><key>assets</key><array><dict><key>kind</key><string>software-package</string><key>url</key><string>http://218.201.61.148:8088/freeway/common/downloadApp?type=2</string></dict><dict><key>kind</key><string>display-image</string><key>needs-shine</key><true/><key>url</key><string>http://218.201.61.148:8088/freeway/lib/style/img/logo.png</string></dict><dict><key>kind</key><string>full-size-image</string><key>needs-shine</key><true/><key>url</key><string>http://www.apicloud.com/icon/c5/62/c562990ad0a351a5a7d6ab99490d0aa8.57x57.png</string></dict></array><key>metadata</key><dict><key>bundle-identifier</key><string>com.lecheng.freeway</string><key>bundle-version</key><string>0.0.1</string><key>kind</key><string>software</string><key>subtitle</key><string>安全管理平台</string><key>title</key><string>安全管理平台</string></dict></dict></array></dict></plist>
